@@ -46,3 +46,4 @@ bin/
 *.patch
 log.*
 nofun
+out_classic
